# AudioBookPlayer

./: .gitattributes  .gitignore  AB Player.pptx  LICENSE.txt  SPEC.md  book.ui  books.ui  config.py  cyrillic_hits.txt  duration_counter.py  filtered_hits.txt  findcyrillic.ps1  installer.nsi  item.ui  main.py  main.ui  main_window.py  pyproject.toml  pyrightconfig.json  qqq  readme.md  readme_en.md  requirements-adnroid-dev.txt  requirements-android-dev.txt  requirements-dev.txt  requirements.txt  requirements_dev.txt  restore_abps.py  ruff.toml  search.ui  setup.py  start_app.py  test.py  untitled.ui  utils.py
ABPlayer/: config.json  config.py  delete_later.py  logger.py  main.py  main_window.py  run.py  start_app.py  starting_window.py  styles.py  temp_file.py  test.py  tools.py
ABPlayer/database/: __init__.py  core.py  field_types.py
ABPlayer/drivers/: __init__.py  akniga.py  base.py  bookmate.py  (+8 more)
database/: __init__.py  tables.py  tools.py
drivers/: __init__.py  akniga.py  base.py  chromedriver.py  exceptions.py
interface/: book.ui  book_series_item.ui  item.ui  main.ui  startapp.ui
resources/: icons.qrc  icons_rc.py
src/: config.py  local_storage.py  logger.py  main.py  main_window.py  run.py  starting_window.py  temp_file.py  tools.py
styles/: Светлая.qss  Тёмная.qss
ui/: __init__.py  book.py  icons_rc.py  library_view.py  main.py  search_view.py
ui_functions/: __init__.py  add_book_page.py  control_panel.py  library.py  menu.py  sliders.py  window_geometry.py
updater/: io_tasks.py  logger.py  main.py  run.py  updating_window.py  version.py
(+203 files in other folders)
